syntax = "proto3";

package Tv;

option java_package = "TVDevice.proto.tv";
option java_multiple_files = true;
option java_outer_classname = "ClassName";

service TVService{
rpc showStatus(TVStatusRequest) returns (TVStatusResponse) {};
rpc setExactVolume(exact_update) returns (TVDetailResponse) {};
rpc tVOn(update_request) returns (TVDetailResponse ) {};
rpc tVOff(update_request) returns (TVDetailResponse ) {};
}

message TV{
 int32 tv_id = 1;
 string device_location = 2;
 string status = 3;
 int32 exact = 4;

}

message TVStatusRequest {
int32 tv_id = 1;
}
message exact_update{
int32 tv_id = 1;
int32 exact_request = 2;
}

message update_request{
 int32 tv_id = 1;

}

message TVStatusResponse {
 TV tv= 1;
}

message TVDetailResponse {
 TV tv= 1;
}